[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14"
lazy_static = "1.5"

# Size optimization (see: https://github.com/johnthagen/min-sized-rust)
[profile.release]
strip = true
lto = true
codegen-units = 1
