[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5"
bevy = "0.14"
# sickle_ui = "0.2.1"
# bevy_infinite_grid = "0.13.0"


# Size optimization (see: https://github.com/johnthagen/min-sized-rust)
[profile.release]
strip = true
lto = true
codegen-units = 1
